Service list added and post format changed

--- a/src/common/colors.scss
+++ b/src/common/colors.scss
@@ -1,7 +1,7 @@
 $black: #000000;
 $white: #ffffff;
 
-$purple: #e90cba;
+$purple: #6308d3; //e90cba
 $purple-90: rgba($purple, 0.9);
 $purple-80: rgba($purple, 0.8);
 $purple-70: rgba($purple, 0.7);
