--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -40,7 +40,7 @@ h6 {
       width: 55px;
       bottom: 0;
       left: 0;
-      background-color: rgb(233, 12, 186);
+      background-color: $purple;
     }
     &:before {
       content: "";
