--- a/src/components/post-list/post-list.scss
+++ b/src/components/post-list/post-list.scss
@@ -5,6 +5,8 @@
     border-color: rgba($black, 0.1);
     cursor: pointer;
     transition: 0.3s ease;
+    position: relative;
+    border-radius: 0;
     &:hover {
       box-shadow: $shadow-purple;
     }
@@ -25,15 +27,19 @@
     .post-details {
       h5 {
         font-weight: 600;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        position: absolute;
+        top: 10px;
+        background: rgba($white, 0.9);
+        padding: 3px 10px;
       }
       p {
         font-size: 0.875rem;
         font-weight: 400;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-        margin-bottom: 8px;
+        position: absolute;
+        bottom: 10px;
+        background: rgba($white, 0.9);
+        padding: 2px 10px;
         span {
           color: $purple;
           font-weight: 700;
@@ -50,7 +56,7 @@
         border-top-right-radius: 2px;
         position: absolute;
         height: 42px;
-        top: -6px;
+        top: 0;
         right: 6px;
         z-index: 2;
       }
@@ -61,26 +67,16 @@
         border-bottom-color: transparent;
         position: absolute;
         height: 42px;
-        top: 0;
+        top: 6px;
         right: 6px;
         z-index: 1;
-      }
-      span {
-        position: absolute;
-        width: 10px;
-        height: 10px;
-        background: transparent;
-        right: 30px;
-        border: 6px solid transparent;
-        border-bottom-color: $purple-60;
-        top: -12px;
       }
       svg {
         z-index: 3;
         font-size: 1.5rem;
         position: absolute;
         right: 9px;
-        top: -6px;
+        top: 0;
         color: white;
       }
     }
