--- a/src/components/services/services.html
+++ b/src/components/services/services.html
@@ -1,4 +1,4 @@
-<div class="service-wrapper container">
+<div class="service-wrapper container p-0">
   <div class="row">
     <div class="col-12 my-5">
       <h3 class="heading">Our <span>Services</span></h3>
