--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -8,7 +8,8 @@ $secondary-font: "Poppins", sans-serif;
 $shadow-small: 0 0px 15px 0px rgba($black, 0.1);
 $shadow-purple: 0 0px 15px 0px rgba($purple, 0.2);
 
-body {
+body,
+html {
   font-family: $primary-font;
   overflow-x: hidden;
 }
@@ -63,4 +64,27 @@ button {
 
 a {
   transition: 0.3s ease;
+}
+
+@media screen and (max-width: 1024px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    &.heading {
+      text-align: center;
+      &:after {
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+      }
+      &:before {
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+      }
+    }
+  }
 }
