--- a/src/components/carousel/carousel.html
+++ b/src/components/carousel/carousel.html
@@ -1,11 +1,11 @@
 <div class="carousel-wrapper container-fluid p-0">
   <div class="row">
     <div class="col-12">
-      <div class="container">
+      <div class="container p-0">
         <Carousel :per-page="1">
           <Slide>
-            <div class="row">
-              <div class="col-12 col-md-4">
+            <div class="row slide-row">
+              <div class="col-12 col-md-4 slide-content">
                 <h1 class="my-5">Lorem ipsum dolor <span>sit amet</span></h1>
                 <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <!-- prettier-ignore -->
@@ -17,8 +17,8 @@
             </div>
           </Slide>
           <Slide>
-            <div class="row">
-              <div class="col-12 col-md-4">
+            <div class="row slide-row">
+              <div class="col-12 col-md-4 slide-content">
                 <h1 class="my-5">Lorem ipsum dolor <span>sit amet</span></h1>
                 <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <!-- prettier-ignore -->
@@ -30,8 +30,8 @@
             </div>
           </Slide>
           <Slide>
-            <div class="row">
-              <div class="col-12 col-md-4">
+            <div class="row slide-row">
+              <div class="col-12 col-md-4 slide-content">
                 <h1 class="my-5">Lorem ipsum dolor <span>sit amet</span></h1>
                 <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <!-- prettier-ignore -->
