--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 justify-content-between d-flex">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
+        <div class="container p-0">
           <a class="navbar-brand" href="#">
             <h3>cars of uae</h3>
           </a>
@@ -26,12 +26,16 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Spare parts</a>
               </li>
+              <li class="nav-item">
+                <!-- prettier-ignore -->
+                <Button type="secondary" text="buy a car" @click="clicked" class="ml-3" />
+              </li>
+              <li class="nav-item">
+                <!-- prettier-ignore -->
+                <Button type="primary" text="sell your car" @click="clicked" class="ml-3" />
+              </li>
             </ul>
           </div>
-          <!-- prettier-ignore -->
-          <Button type="secondary" text="buy a car" @click="clicked" class="float-right mr-3" />
-          <!-- prettier-ignore -->
-          <Button type="primary" text="sell your car" @click="clicked" class="float-right" />
         </div>
       </nav>
     </div>
