--- a/src/components/post-list/post-list.scss
+++ b/src/components/post-list/post-list.scss
@@ -27,17 +27,21 @@
     .post-details {
       h5 {
         font-weight: 600;
-        font-size: 1.1rem;
+        font-size: 1rem;
         position: absolute;
         top: 10px;
         background: rgba($white, 0.9);
-        padding: 3px 10px;
+        padding: 2px 10px;
+        max-width: 75%;
+        border-radius: 0 10px 10px 0;
       }
       p {
         font-size: 0.875rem;
         font-weight: 400;
         position: absolute;
         bottom: 10px;
+        right: 0;
+        border-radius: 10px 0 0 10px;
         background: rgba($white, 0.9);
         padding: 2px 10px;
         span {
@@ -77,7 +81,45 @@
         position: absolute;
         right: 9px;
         top: 0;
-        color: white;
+        color: $white;
+      }
+    }
+  }
+  @media screen and (max-width: 1024px) {
+    .card {
+      .thumb-wrapper {
+        height: 150px;
+      }
+      .post-details {
+        h5 {
+          font-size: 0.75rem;
+          top: 5px;
+          margin: 0 !important;
+        }
+        p {
+          font-size: 0.75rem;
+          bottom: 5px;
+          margin: 0;
+        }
+      }
+      .featured-icon {
+        &:before {
+          border: 10px solid $purple;
+          height: 30px;
+          background: transparent;
+          border-bottom-color: transparent;
+        }
+        &:after {
+          border: 10px solid $purple-60;
+          height: 30px;
+          top: 4px;
+          background: transparent;
+          border-bottom-color: transparent;
+        }
+        svg {
+          font-size: 1rem;
+          right: 8px;
+        }
       }
     }
   }
