--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -33,4 +33,8 @@
       }
     }
   }
+  @media screen and (max-width: 575px) {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+  }
 }
