Home page updates

--- a/src/common/colors.scss
+++ b/src/common/colors.scss
@@ -7,3 +7,9 @@ $purple-80: rgba($purple, 0.8);
 $purple-70: rgba($purple, 0.7);
 $purple-60: rgba($purple, 0.6);
 $purple-50: rgba($purple, 0.5);
+$purple-40: rgba($purple, 0.4);
+$purple-30: rgba($purple, 0.3);
+$purple-20: rgba($purple, 0.2);
+$purple-10: rgba($purple, 0.1);
+
+$purpleArray: ($purple, $purple-90, $purple-80, $purple-70, $purple-60, $purple-50, $purple-40, $purple-30, $purple-20, $purple-10);
