--- a/src/components/carousel/carousel.html
+++ b/src/components/carousel/carousel.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <div class="container p-0">
-        <Carousel :per-page="1">
+        <Carousel id="banner-carousel" :per-page="1" controls="true" :navigationEnabled="true" :loop="true">
           <Slide>
             <div class="row slide-row">
               <div class="col-12 col-md-4 slide-content">
