--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -5,9 +5,11 @@
   color: white;
   background: $purple;
   transition: 0.3s ease;
-  min-width: 100px;
   &:hover {
     background: $purple-70;
+    svg {
+      transform: rotate(360deg);
+    }
   }
   &.primary {
     background: $purple;
@@ -29,5 +31,10 @@
       background: rgba($purple, 0.7);
       color: $white;
     }
+  }
+  svg {
+    font-size: 1.5rem;
+    transition: 0.3s ease;
+    transform: rotate(0deg);
   }
 }
