--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -1,10 +1,17 @@
-<div class="footer-wrapper container-fluid">
+<div class="footer-wrapper container-fluid p-0">
   <div class="row">
     <div class="col-12">
       <div class="container">
         <div class="row">
-          <div class="col-12 p-0">
+          <div class="col-12 p-0 py-3 d-none d-lg-block">
             <div>&copy; Cars of UAE {{fullYear}}. All Rights Reserved</div>
+          </div>
+          <div class="col-12 p-0 d-lg-none mobile-footer-menu">
+            <ul>
+              <li><font-awesome-icon :icon="['fas','home']" /><span>Home</span></li>
+              <li><font-awesome-icon :icon="['fas','search']" /><span>Search</span></li>
+              <li><font-awesome-icon :icon="['fas','user-alt']" /><span>Profile</span></li>
+            </ul>
           </div>
         </div>
       </div>
