--- a/src/components/post-list/post-list.html
+++ b/src/components/post-list/post-list.html
@@ -21,7 +21,8 @@
                   <p><em></em> <span>AED {{ post.price }}</span></p>
                 </div>
                 <span class="featured-icon" title="Featured Post">
-                  <font-awesome-icon :icon="['fas','medal']" />
+                  <!-- <font-awesome-icon :icon="['fas','medal']" /> -->
+                  <img src="../../assets/featured.png" class="img-fluid" />
                 </span>
               </div>
             </div>
@@ -43,7 +44,8 @@
                 <p><em></em> <span>AED {{ post.price }}</span></p>
               </div>
               <span class="featured-icon" title="Featured Post" v-if="post.featured">
-                <font-awesome-icon :icon="['fas','medal']" />
+                <!-- <font-awesome-icon :icon="['fas','medal']" /> -->
+                <img src="../../assets/featured.png" class="img-fluid" />
               </span>
             </div>
           </div>
