--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -4,7 +4,7 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container p-0 position-relative">
           <a class="navbar-brand" href="#">
-            <h3>cars of uae</h3>
+            <img src="../../assets/logo.png" class="img-fluid" />
           </a>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span></span>
