--- a/src/components/post-list/post-list.scss
+++ b/src/components/post-list/post-list.scss
@@ -76,6 +76,7 @@
         bottom: 10px;
         right: 0;
         display: flex;
+        align-items: center;
         height: 20px;
         &.distance {
           left: 0;
@@ -97,6 +98,8 @@
           color: $purple;
           font-weight: 700;
           background-color: rgba($white, 0.9);
+          display: inline-flex;
+          align-items: center;
         }
         em {
           border-top: 20px solid rgba($white, 0.9);
@@ -106,6 +109,8 @@
     }
 
     .featured-icon {
+      img {
+      }
       &:before {
         content: "";
         border: 15px solid $purple;
@@ -113,7 +118,7 @@
         border-bottom-color: transparent;
         border-top-right-radius: 2px;
         position: absolute;
-        height: 42px;
+        height: 37px;
         top: 0;
         right: 6px;
         z-index: 2;
@@ -124,19 +129,26 @@
         background: transparent;
         border-bottom-color: transparent;
         position: absolute;
-        height: 42px;
+        height: 36px;
         top: 6px;
         right: 6px;
         z-index: 1;
       }
-      svg {
-        z-index: 3;
-        font-size: 1.5rem;
+      img {
+        width: 20px;
         position: absolute;
-        right: 9px;
-        top: 0;
-        color: $white;
+        right: 10px;
+        top: 5px;
+        z-index: 3;
       }
+      // svg {
+      //   z-index: 3;
+      //   font-size: 1.5rem;
+      //   position: absolute;
+      //   right: 9px;
+      //   top: 0;
+      //   color: $white;
+      // }
     }
   }
   @media screen and (max-width: 991px) {
@@ -152,9 +164,12 @@
           margin: 0 !important;
         }
         p {
-          font-size: 0.75rem;
           bottom: 5px;
           margin: 0;
+          span {
+            height: 20px;
+            font-size: 0.65rem;
+          }
         }
       }
       .featured-icon {
@@ -171,10 +186,10 @@
           background: transparent;
           border-bottom-color: transparent;
         }
-        svg {
-          font-size: 1rem;
-          right: 8px;
-        }
+        // svg {
+        //   font-size: 1rem;
+        //   right: 8px;
+        // }
       }
     }
   }
