Logo and featured icon update

--- a/src/components/post-list/post-list.scss
+++ b/src/components/post-list/post-list.scss
@@ -186,6 +186,10 @@
           background: transparent;
           border-bottom-color: transparent;
         }
+        img {
+          width: 16px;
+          right: 8px;
+        }
         // svg {
         //   font-size: 1rem;
         //   right: 8px;
