--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&family=Nunito:wght@200;400;600&family=Poppins:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&family=Nunito:wght@200;400;600;700&family=Poppins:wght@400;600;700&display=swap");
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "./colors.scss";
 
