--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -52,6 +52,7 @@
         border: 1px solid rgba($black, .15);
         display: flex;
         border-radius: 3px;
+        padding: 15px;
         img {
             border: 1px solid rgba($black, .15);
             border-radius: 50%;
