--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -8,12 +8,90 @@
             color: rgba($black, .6);
             font-size: .875rem;
         }
-        .image-wrapper {
-            img {
-                max-height: 500px;
-                width: 100%;
-                object-fit: cover;
-                object-position: 50% 50%;
+        .image-scroll-wrapper {
+            overflow-x: auto;
+            &::-webkit-scrollbar {
+                display: none;
+            }
+            .image-wrapper {
+                display: grid;
+                grid-template-columns: repeat(6, 1fr);
+                grid-template-rows: repeat(6, 5vw);
+                grid-gap: 5px;
+                min-width: 800px;
+                img {
+                    width: 100%;
+                    object-position: 50% 50%;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+                div {
+                    position: relative;
+                    overflow: hidden;
+                    cursor: pointer;
+                    &:hover {
+                        img {
+                            transform: scale(1.05);
+                            transition: .3s ease;
+                        }
+                    }
+                    &:nth-child(1) {
+                        grid-column-start: 1;
+                        grid-column-end: 5;
+                        grid-row-start: 1;
+                        grid-row-end: 7;
+                    }
+                    &:nth-child(2) {
+                        grid-column-start: 5;
+                        grid-column-end: 6;
+                        grid-row-start: 1;
+                        grid-row-end: 3;
+                    }
+                    &:nth-child(3) {
+                        grid-column-start: 6;
+                        grid-column-end: 6;
+                        grid-row-start: 1;
+                        grid-row-end: 3;
+                    }
+                    &:nth-child(4) {
+                        grid-column-start: 5;
+                        grid-column-end: 6;
+                        grid-row-start: 3;
+                        grid-row-end: 5;
+                    }
+                    &:nth-child(5) {
+                        grid-column-start: 6;
+                        grid-column-end: 6;
+                        grid-row-start: 3;
+                        grid-row-end: 5;
+                    }
+                    &:nth-child(6) {
+                        grid-column-start: 5;
+                        grid-column-end: 6;
+                        grid-row-start: 5;
+                        grid-row-end: 7;
+                    }
+                    &:nth-child(7) {
+                        grid-column-start: 6;
+                        grid-column-end: 6;
+                        grid-row-start: 5;
+                        grid-row-end: 7;
+                        &:after {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            background-color: rgba($black, .7);
+                            color: $white;
+                            content: "All Photos (" attr(data-count) ")";
+                        }
+                    }
+                }
             }
         }
     }
@@ -89,16 +167,66 @@
                 order: 3;
                 padding: 0 15px;
                 font-size: .75rem;
+                margin-bottom: 0;
                 span {
                     width: 100%;
                     margin-top: 5px;
                 }
             }
-            .image-wrapper {
-                order: 1;
-                margin-bottom: 10px !important;
-                img {
-                    min-height: 300px;
+            .image-scroll-wrapper {
+                margin-bottom: 10px;
+                .image-wrapper {
+                    order: 1;
+                    margin-bottom: 10px !important;
+                    grid-template-columns: repeat(9, 1fr);
+                    grid-template-rows: repeat(9, 5vw);
+                    div {
+                        img {
+                            transform: scale(1) !important;
+                        }
+                        &:nth-child(1) {
+                            grid-column-start: 1;
+                            grid-column-end: 6;
+                            grid-row-start: 1;
+                            grid-row-end: 10;
+                        }
+                        &:nth-child(2) {
+                            grid-column-start: 6;
+                            grid-column-end: 8;
+                            grid-row-start: 1;
+                            grid-row-end: 4;
+                        }
+                        &:nth-child(3) {
+                            grid-column-start: 8;
+                            grid-column-end: 10;
+                            grid-row-start: 1;
+                            grid-row-end: 4;
+                        }
+                        &:nth-child(4) {
+                            grid-column-start: 6;
+                            grid-column-end: 8;
+                            grid-row-start: 4;
+                            grid-row-end: 7;
+                        }
+                        &:nth-child(5) {
+                            grid-column-start: 8;
+                            grid-column-end: 10;
+                            grid-row-start: 4;
+                            grid-row-end: 7;
+                        }
+                        &:nth-child(6) {
+                            grid-column-start: 6;
+                            grid-column-end: 8;
+                            grid-row-start: 7;
+                            grid-row-end: 10;
+                        }
+                        &:nth-child(7) {
+                            grid-column-start: 8;
+                            grid-column-end: 10;
+                            grid-row-start: 7;
+                            grid-row-end: 10;
+                        }
+                    }
                 }
             }
         }
