--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -30,10 +30,15 @@
                     position: relative;
                     overflow: hidden;
                     cursor: pointer;
+                    img {
+                        transform: scale(1);
+                        transform-origin: 50% 50%;
+                        transition: .3s ease;
+                    }
                     &:hover {
                         img {
-                            transform: scale(1.05);
-                            transition: .3s ease;
+                            transform: scale(1.1);
+                            transform-origin: 50% 50%;
                         }
                     }
                     &:nth-child(1) {
@@ -146,6 +151,15 @@
                 width: 100%;
                 display: flex;
                 margin-bottom: 10px;
+            }
+        }
+    }
+}
+@media screen and (max-width: 767px) {
+    .image-title-wrapper {
+        .image-scroll-wrapper {
+            .image-wrapper {
+                min-width: 600px !important;
             }
         }
     }
