--- a/src/components/post-list/post-list.html
+++ b/src/components/post-list/post-list.html
@@ -6,18 +6,35 @@
           <div class="col-12 mb-5 p-0">
             <h3 class="heading">Featured <span>posts</span></h3>
           </div>
-          <Carousel id="post-carousel" controls="true" :navigationEnabled="true" :autoplay="true">
+          <Carousel
+            id="post-carousel"
+            controls="true"
+            :navigationEnabled="true"
+            :autoplay="true"
+          >
             <div class="col-4 col-md-3 p-0" v-for="post in featuredPostData">
-              <div class="card" :class="post.featured && 'featured'">
+              <div
+                class="card"
+                :class="post.featured && 'featured'"
+                @click="viewPostDetails(post.id)"
+              >
                 <div class="thumb-wrapper">
                   <img :src="post.thumb" class="img-fluid" />
                 </div>
                 <div class="post-details">
-                  <h5 class="my-2" :title="`${post.make} ${post.company} ${post.model}`">
-                    <span>{{ post.make }} {{ post.company }} {{ post.model }}</span>
+                  <h5
+                    class="my-2"
+                    :title="`${post.make} ${post.company} ${post.model}`"
+                  >
+                    <span
+                      >{{ post.make }} {{ post.company }} {{ post.model }}</span
+                    >
                     <em></em>
                   </h5>
-                  <p class="distance"><span>{{ formatDistance(post.distance, 3) }} kms</span><em></em></p>
+                  <p class="distance">
+                    <span>{{ formatDistance(post.distance, 3) }} kms</span
+                    ><em></em>
+                  </p>
                   <p><em></em> <span>AED {{ post.price }}</span></p>
                 </div>
                 <span class="featured-icon" title="Featured Post">
@@ -31,20 +48,35 @@
             <h3 class="heading">Latest <span>posts</span></h3>
           </div>
           <div class="col-4 col-md-3 p-0" v-for="post in postData">
-            <div class="card" :class="post.featured && 'featured'" @click="viewPostDetails(post.id)">
+            <div
+              class="card"
+              :class="post.featured && 'featured'"
+              @click="viewPostDetails(post.id)"
+            >
               <div class="thumb-wrapper">
                 <img :src="post.thumb" class="img-fluid" />
               </div>
               <div class="post-details">
-                <h5 class="my-2" :title="`${post.make} ${post.company} ${post.model}`">
-                  <span>{{ post.make }} {{ post.company }} {{ post.model }}</span>
+                <h5
+                  class="my-2"
+                  :title="`${post.make} ${post.company} ${post.model}`"
+                >
+                  <span
+                    >{{ post.make }} {{ post.company }} {{ post.model }}</span
+                  >
                   <em></em>
                 </h5>
-                <p class="distance"><span>{{ formatDistance(post.distance, 3) }} kms</span><em></em></p>
+                <p class="distance">
+                  <span>{{ formatDistance(post.distance, 3) }} kms</span
+                  ><em></em>
+                </p>
                 <p><em></em> <span>AED {{ post.price }}</span></p>
               </div>
-              <span class="featured-icon" title="Featured Post" v-if="post.featured">
-                <!-- <font-awesome-icon :icon="['fas','medal']" /> -->
+              <span
+                class="featured-icon"
+                title="Featured Post"
+                v-if="post.featured"
+              >
                 <img src="../../assets/featured.png" class="img-fluid" />
               </span>
             </div>
