--- a/src/views/post-details/post-details.html
+++ b/src/views/post-details/post-details.html
@@ -1,72 +1,79 @@
 <div class="container post-details-wrapper my-4">
   <div class="row" v-if="!postData">
     <div class="col-12 mb-5 p-0">
-      <h3 class="d-flex justify-content-center align-items-center">Loading...</h3>
+      <h3 class="d-flex justify-content-center align-items-center">
+        Loading...
+      </h3>
     </div>
   </div>
-    <div class="row" v-else>
-      <div class="col-12 mb-5 p-0">
-        <div class="image-title-wrapper mb-4">
-          <h3 class="mb-1">{{postData.company}} {{postData.model}} <span>{{postData.make}}</span></h3>
-          <p class="date-place">
-            <font-awesome-icon :icon="['fas', 'map-marker-alt']" class="icon" /> 
-            {{postData.place}}
-            <span class="float-right" title="Posted On">
-              <font-awesome-icon :icon="['far', 'calendar-alt']" class="icon" /> 
-              {{postData.date}}
-            </span>
-          </p>
-          <div class="image-scroll-wrapper">
-            <CoolLightBox 
-              :items="postData.gallery" 
-              :index="index"
-              @close="index = null">
-            </CoolLightBox>
-            <div class="image-wrapper" v-if="postData.gallery">
-              <div 
-                v-for="(image, imageIndex) in postData.gallery.slice(0,7)"
-                :data-count="postData.gallery.length"
-                :key="imageIndex"
-                @click="index = imageIndex"
-                :style="{ backgroundImage: 'url(' + image + ')' }"><img :src="image" /></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-9">
-            <h5>Overview</h5>
-            <ul class="overview-table my-3">
-              <li>
-                <p>Make</p>
-                <p>{{postData.make}}</p>
-              </li>
-              <li>
-                <p>Model</p>
-                <p>{{postData.model}}</p>
-              </li>
-              <li>
-                <p>Brand</p>
-                <p>{{postData.company}}</p>
-              </li>
-              <li>
-                <p>Description</p>
-                <p>{{postData.desc}}</p>
-              </li>
-              <li>
-                <p>Distance</p>
-                <p>{{postData.distance}} kms</p>
-              </li>
-            </ul>
-            <div class="user-desc mb-4">
-              <img src="../../assets/user-profile.png" />
-              <p><span>Chris's Take</span>Now this is a cool Defender! Not only does it look absolutely awesome, but it touts some great modifications that will clearly enhance its capabilities off the pavement -- including a lift, bigger tires, a winch, and a snorkel.</p>
-            </div>
-            <h5>Video</h5>
-            <div class="video-wrapper mt-3">
-              <iframe width="100%" height="400px" src="https://www.youtube.com/embed/fKNdoxRld34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="row" v-else>
+    <div class="col-12 mb-5 p-0">
+      <div class="image-title-wrapper mb-4">
+        <h3 class="mb-1">
+          {{postData.company}} {{postData.model}} <span>{{postData.make}}</span>
+        </h3>
+        <p class="date-place">
+          <font-awesome-icon :icon="['fas', 'map-marker-alt']" class="icon" />
+          {{postData.place}}
+          <span class="float-right" title="Posted On">
+            <font-awesome-icon :icon="['far', 'calendar-alt']" class="icon" />
+            {{postData.date}}
+          </span>
+        </p>
+        <div class="image-scroll-wrapper">
+          <CoolLightBox
+            :items="postData.gallery"
+            :index="index"
+            @close="index = null"
+          >
+          </CoolLightBox>
+          <div class="image-wrapper" v-if="postData.gallery">
+            <div
+              v-for="(image, imageIndex) in postData.gallery.slice(0,7)"
+              :data-count="postData.gallery.length"
+              :key="imageIndex"
+              @click="index = imageIndex"
+              :style="{ backgroundImage: 'url(' + image + ')' }"
+            >
+              <img :src="image" />
             </div>
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-9">
+          <h5>Overview</h5>
+          <PostDetailTable :data="postData" />
+          <div class="user-desc mb-4">
+            <img src="../../assets/user-profile.png" />
+            <p>
+              <span>Chris's Take</span>Now this is a cool Defender! Not only
+              does it look absolutely awesome, but it touts some great
+              modifications that will clearly enhance its capabilities off the
+              pavement -- including a lift, bigger tires, a winch, and a
+              snorkel.
+            </p>
+          </div>
+          <h5>Video</h5>
+          <div class="video-wrapper mt-3">
+            <iframe
+              width="100%"
+              height="400px"
+              src="https://www.youtube.com/embed/fKNdoxRld34"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <!-- <template>
+          <section class="comments" aria-labelledby="comment">
+            <h2 id="comment">Comments</h2>
+            <Disqus shortname="carsofuae" />
+          </section>
+        </template> -->
+      </div>
     </div>
+  </div>
 </div>
