--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -1,264 +1,230 @@
 .post-details-wrapper {
-    padding-top: 100px !important;
-    .image-title-wrapper {
-        .icon {
-            color: $purple;
-        }
-        .date-place {
-            color: rgba($black, .6);
-            font-size: .875rem;
-        }
-        .image-scroll-wrapper {
-            overflow-x: auto;
-            &::-webkit-scrollbar {
-                display: none;
-            }
-            .image-wrapper {
-                display: grid;
-                grid-template-columns: repeat(6, 1fr);
-                grid-template-rows: repeat(6, 5vw);
-                grid-gap: 5px;
-                min-width: 800px;
-                img {
-                    width: 100%;
-                    object-position: 50% 50%;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-                div {
-                    position: relative;
-                    overflow: hidden;
-                    cursor: pointer;
-                    img {
-                        transform: scale(1);
-                        transform-origin: 50% 50%;
-                        transition: .3s ease;
-                    }
-                    &:hover {
-                        img {
-                            transform: scale(1.1);
-                            transform-origin: 50% 50%;
-                        }
-                    }
-                    &:nth-child(1) {
-                        grid-column-start: 1;
-                        grid-column-end: 5;
-                        grid-row-start: 1;
-                        grid-row-end: 7;
-                    }
-                    &:nth-child(2) {
-                        grid-column-start: 5;
-                        grid-column-end: 6;
-                        grid-row-start: 1;
-                        grid-row-end: 3;
-                    }
-                    &:nth-child(3) {
-                        grid-column-start: 6;
-                        grid-column-end: 6;
-                        grid-row-start: 1;
-                        grid-row-end: 3;
-                    }
-                    &:nth-child(4) {
-                        grid-column-start: 5;
-                        grid-column-end: 6;
-                        grid-row-start: 3;
-                        grid-row-end: 5;
-                    }
-                    &:nth-child(5) {
-                        grid-column-start: 6;
-                        grid-column-end: 6;
-                        grid-row-start: 3;
-                        grid-row-end: 5;
-                    }
-                    &:nth-child(6) {
-                        grid-column-start: 5;
-                        grid-column-end: 6;
-                        grid-row-start: 5;
-                        grid-row-end: 7;
-                    }
-                    &:nth-child(7) {
-                        grid-column-start: 6;
-                        grid-column-end: 6;
-                        grid-row-start: 5;
-                        grid-row-end: 7;
-                        &:after {
-                            position: absolute;
-                            top: 0;
-                            left: 0;
-                            width: 100%;
-                            height: 100%;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            background-color: rgba($black, .7);
-                            color: $white;
-                            content: "All Photos (" attr(data-count) ")";
-                        }
-                    }
-                }
-            }
-        }
+  padding-top: 100px !important;
+  .image-title-wrapper {
+    .icon {
+      color: $purple;
     }
-    .overview-table {
-        margin: 0;
-        padding: 0;
-        li {
-            list-style: none;
-            border: 1px solid rgba($black, .15);
-            border-bottom: none;
-            display: flex;
-            justify-content: space-between;
-            &:first-child {
-                border-radius: 3px 3px 0 0;
-            }
-            &:last-child {
-                border-radius: 0 0 3px 3px;
-                border-bottom: 1px solid rgba($black, .15);
-            }
-            p {
-                padding: 10px;
-                display: inline-flex;
-                justify-content: flex-start;
-                align-items: center;
-                width: 100%;
-                margin: 0;
-                &:first-child {
-                    font-weight: 700;
-                    background-color: rgba($black, .05); 
-                }
-            }
-        }
+    .date-place {
+      color: rgba($black, 0.6);
+      font-size: 0.875rem;
     }
-    .user-desc {
-        background-color: rgba($black, .05);
-        border: 1px solid rgba($black, .15);
-        display: flex;
-        border-radius: 3px;
-        padding: 15px;
+    .image-scroll-wrapper {
+      overflow-x: auto;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+      .image-wrapper {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 5vw);
+        grid-gap: 5px;
+        min-width: 800px;
         img {
-            border: 1px solid rgba($black, .15);
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            margin-right: 15px;
+          width: 100%;
+          object-position: 50% 50%;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
-        p {
-            margin-bottom: 0;
-            span {
-                font-size: 1.2rem;
-                font-weight: 700;
-                width: 100%;
-                display: flex;
-                margin-bottom: 10px;
+        div {
+          position: relative;
+          overflow: hidden;
+          cursor: pointer;
+          img {
+            transform: scale(1);
+            transform-origin: 50% 50%;
+            transition: 0.3s ease;
+          }
+          &:hover {
+            img {
+              transform: scale(1.1);
+              transform-origin: 50% 50%;
             }
+          }
+          &:nth-child(1) {
+            grid-column-start: 1;
+            grid-column-end: 5;
+            grid-row-start: 1;
+            grid-row-end: 7;
+          }
+          &:nth-child(2) {
+            grid-column-start: 5;
+            grid-column-end: 6;
+            grid-row-start: 1;
+            grid-row-end: 3;
+          }
+          &:nth-child(3) {
+            grid-column-start: 6;
+            grid-column-end: 6;
+            grid-row-start: 1;
+            grid-row-end: 3;
+          }
+          &:nth-child(4) {
+            grid-column-start: 5;
+            grid-column-end: 6;
+            grid-row-start: 3;
+            grid-row-end: 5;
+          }
+          &:nth-child(5) {
+            grid-column-start: 6;
+            grid-column-end: 6;
+            grid-row-start: 3;
+            grid-row-end: 5;
+          }
+          &:nth-child(6) {
+            grid-column-start: 5;
+            grid-column-end: 6;
+            grid-row-start: 5;
+            grid-row-end: 7;
+          }
+          &:nth-child(7) {
+            grid-column-start: 6;
+            grid-column-end: 6;
+            grid-row-start: 5;
+            grid-row-end: 7;
+            &:after {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              background-color: rgba($black, 0.7);
+              color: $white;
+              content: "All Photos (" attr(data-count) ")";
+            }
+          }
         }
+      }
     }
+  }
+  .user-desc {
+    background-color: rgba($black, 0.05);
+    border: 1px solid rgba($black, 0.15);
+    display: flex;
+    border-radius: 3px;
+    padding: 15px;
+    img {
+      border: 1px solid rgba($black, 0.15);
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      margin-right: 15px;
+    }
+    p {
+      margin-bottom: 0;
+      span {
+        font-size: 1.2rem;
+        font-weight: 700;
+        width: 100%;
+        display: flex;
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
 @media screen and (max-width: 767px) {
-    .image-title-wrapper {
-        .image-scroll-wrapper {
-            .image-wrapper {
-                min-width: 600px !important;
-            }
-        }
+  .image-title-wrapper {
+    .image-scroll-wrapper {
+      .image-wrapper {
+        min-width: 600px !important;
+      }
     }
+  }
 }
 @media screen and (max-width: 991px) {
-    .post-details-wrapper {
-        padding-top: 70px !important;
-        margin-top: 0 !important;
-        .image-title-wrapper {
-            display: flex;
-            flex-direction: column;
-            h3 {
-                order: 2;
-                padding: 0 15px;
-                font-size: 1.4rem;
+  .post-details-wrapper {
+    padding-top: 70px !important;
+    margin-top: 0 !important;
+    .image-title-wrapper {
+      display: flex;
+      flex-direction: column;
+      h3 {
+        order: 2;
+        padding: 0 15px;
+        font-size: 1.4rem;
+      }
+
+      .date-place {
+        order: 3;
+        padding: 0 15px;
+        font-size: 0.75rem;
+        margin-bottom: 0;
+        span {
+          width: 100%;
+          margin-top: 5px;
+        }
+      }
+      .image-scroll-wrapper {
+        margin-bottom: 10px;
+        .image-wrapper {
+          order: 1;
+          margin-bottom: 10px !important;
+          grid-template-columns: repeat(9, 1fr);
+          grid-template-rows: repeat(9, 5vw);
+          div {
+            img {
+              transform: scale(1) !important;
             }
-           
-            .date-place {
-                order: 3;
-                padding: 0 15px;
-                font-size: .75rem;
-                margin-bottom: 0;
-                span {
-                    width: 100%;
-                    margin-top: 5px;
-                }
+            &:nth-child(1) {
+              grid-column-start: 1;
+              grid-column-end: 6;
+              grid-row-start: 1;
+              grid-row-end: 10;
             }
-            .image-scroll-wrapper {
-                margin-bottom: 10px;
-                .image-wrapper {
-                    order: 1;
-                    margin-bottom: 10px !important;
-                    grid-template-columns: repeat(9, 1fr);
-                    grid-template-rows: repeat(9, 5vw);
-                    div {
-                        img {
-                            transform: scale(1) !important;
-                        }
-                        &:nth-child(1) {
-                            grid-column-start: 1;
-                            grid-column-end: 6;
-                            grid-row-start: 1;
-                            grid-row-end: 10;
-                        }
-                        &:nth-child(2) {
-                            grid-column-start: 6;
-                            grid-column-end: 8;
-                            grid-row-start: 1;
-                            grid-row-end: 4;
-                        }
-                        &:nth-child(3) {
-                            grid-column-start: 8;
-                            grid-column-end: 10;
-                            grid-row-start: 1;
-                            grid-row-end: 4;
-                        }
-                        &:nth-child(4) {
-                            grid-column-start: 6;
-                            grid-column-end: 8;
-                            grid-row-start: 4;
-                            grid-row-end: 7;
-                        }
-                        &:nth-child(5) {
-                            grid-column-start: 8;
-                            grid-column-end: 10;
-                            grid-row-start: 4;
-                            grid-row-end: 7;
-                        }
-                        &:nth-child(6) {
-                            grid-column-start: 6;
-                            grid-column-end: 8;
-                            grid-row-start: 7;
-                            grid-row-end: 10;
-                        }
-                        &:nth-child(7) {
-                            grid-column-start: 8;
-                            grid-column-end: 10;
-                            grid-row-start: 7;
-                            grid-row-end: 10;
-                        }
-                    }
-                }
+            &:nth-child(2) {
+              grid-column-start: 6;
+              grid-column-end: 8;
+              grid-row-start: 1;
+              grid-row-end: 4;
             }
+            &:nth-child(3) {
+              grid-column-start: 8;
+              grid-column-end: 10;
+              grid-row-start: 1;
+              grid-row-end: 4;
+            }
+            &:nth-child(4) {
+              grid-column-start: 6;
+              grid-column-end: 8;
+              grid-row-start: 4;
+              grid-row-end: 7;
+            }
+            &:nth-child(5) {
+              grid-column-start: 8;
+              grid-column-end: 10;
+              grid-row-start: 4;
+              grid-row-end: 7;
+            }
+            &:nth-child(6) {
+              grid-column-start: 6;
+              grid-column-end: 8;
+              grid-row-start: 7;
+              grid-row-end: 10;
+            }
+            &:nth-child(7) {
+              grid-column-start: 8;
+              grid-column-end: 10;
+              grid-row-start: 7;
+              grid-row-end: 10;
+            }
+          }
         }
-        h5 {
-            padding: 0 15px;
-            font-size: 1.1rem;
-            margin-top: 5px;
-        }
-        .overview-table {
-            padding: 0 15px;
-            font-size: .875rem;
-        }
-        .user-desc {
-            margin: 0 15px;
-            padding: 15px;
-        }
-        .video-wrapper {
-            margin: 0 15px;
-        }
+      }
     }
+    h5 {
+      padding: 0 15px;
+      font-size: 1.1rem;
+      margin-top: 5px;
+    }
+    .user-desc {
+      margin: 0 15px;
+      padding: 15px;
+    }
+    .video-wrapper {
+      margin: 0 15px;
+    }
+  }
 }
